objects/vtse__Assessment_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Average_Score__c</fullName>
        <label>Average Score</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Media_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Video Feedback</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Assessment Feedback</relationshipLabel>
        <relationshipName>Assessment_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assessment Feedback (Reviewer)</relationshipLabel>
        <relationshipName>Assessment_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Stand_Deliver_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand and Deliver Submission</label>
        <referenceTo>vtse__Stand_Deliver_Submission__c</referenceTo>
        <relationshipLabel>Assessment Feedback</relationshipLabel>
        <relationshipName>Assessment_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vtse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assessment Feedback</relationshipLabel>
        <relationshipName>Assessment_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assessment Feedback</label>
    <nameField>
        <displayFormat>AF-{0}</displayFormat>
        <label>Assessment Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>